--- a/src/app/components/code-editor/code-editor.component.css
+++ b/src/app/components/code-editor/code-editor.component.css
@@ -1,22 +1,47 @@
 .editor-wrapper { 
+  height: 100%; 
+  display: flex; 
+  flex-direction: column;
  
-background-color: antiquewhite;
+  background-color: antiquewhite;
 }
 
-#mode-buttons {
-    margin-top: 10px;
+ 
+ 
+  
+  .buttons {
+    position: fixed;
+    bottom: 0;
+    /* left: 0; */
+    right: 0;
+  }
+  .container {
+    
+    height: 82vh;
+    display: flex;
+    flex-direction: column;
+    position: relative;
   }
   
-  #mode-buttons button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-right: 10px;
-    cursor: pointer;
+  #editor {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
   }
   
+  .result {
+    position: absolute;
+    bottom: 0;
+    left: 44px;
+    right: 0;
+    height: 15vh;
+    backface-visibility: hidden;
+    background-color: aliceblue;
+    overflow: auto;
+  }
+  .result-visible + #editor {
+    height: calc(100vh - 200px); /* subtract the height of the result div from the viewport height */
+  }
